--- a/locale/uk/locale.cfg
+++ b/locale/uk/locale.cfg
@@ -1,79 +1,79 @@
 [item-name]
-atomic-plate=Atomic plate
-reinforced-plate=Reinforced Plate
-enriched-plate=Enriched Plate
-enhanced-solar=Enhanced Solar Panel
-reinforced-solar=Reinforced Solar Panel
-atomic-solar=Atomic Solar Panel
-basic-fuel-capsule=Basic Fuel Capsule
-enhanced-fuel-capsule=Enhanced Fuel Capsule
-reinforced-fuel-capsule=Reinforced Fuel Capsule
-atomic-fuel-capsule=Atomic Fuel Capsule
-atomic-artillery=Atomic Artillery Shell
-atomic-magazine=Atomic Firearm Magazine
-atomic-piercing-magazine=Atomic Piercing Rounds Magazine
-reinforced-magazine=Reinforced Firearm Magazine
-reinforced-piercing-magazine=Reinforced Piercing Rounds Magazine
-enhanced-magazine=Enhanced Firearm Magazine
-enhanced-piercing-magazine=Enhanced Piercing Rounds Magazine
+atomic-plate=Атомна пластина
+reinforced-plate=Посилена пластина
+enriched-plate=Збагачена пластина
+enhanced-solar=Покращена сонячна панель
+reinforced-solar=Посилена сонячна панель
+atomic-solar=Атомна сонячна панель
+basic-fuel-capsule=Базова паливна капсула
+enhanced-fuel-capsule=Покращена паливна капсула
+reinforced-fuel-capsule=Посилена паливна капсула
+atomic-fuel-capsule=Атомна сонячна панель
+atomic-artillery=Ядерний артилерійскій снаряд
+atomic-magazine=Атомний магазин
+  atomic-piercing-magazine=Атомний бронебійний магазин
+reinforced-magazine=Посилений магазин
+reinforced-piercing-magazine=Посилений бронеюбійний магазин
+enhanced-magazine=Покращений магазин
+enhanced-piercing-magazine=Покращений бронебійний магазин
 
 [item-description]
-atomic-plate=An intermediate crafting componet
-reinforced-plate=An intermediate crafting componet
-enriched-plate=An intermediate crafting componet
-enhanced-solar=Acts as a normal solar but a little more expensive and produces more power
-reinforced-solar=Acts as a normal solar but a little more expensive and produces more power
-atomic-solar=Acts as a normal solar but a little more expensive and produces more power
-basic-fuel-capsule=A fuel capsule
-enhanced-fuel-capsule=A fuel capsule
-reinforced-fuel-capsule=A fuel capsule
-atomic-fuel-capsule=A fuel capsule
-atomic-artillery= A nuclear artillery shell
-atomic-magazine=Extremely good version of the Firearm Magazine
-atomic-piercing-magazine=Extremely good version of the Piercing Rounds Magazine
-reinforced-magazine=Realitively good version of the Firearm Magazine
-reinforced-piercing-magazine=Realitively good version of the Piercing Rounds Magazine
-enhanced-magazine=Better version of the Firearm Magazine
-enhanced-piercing-magazine=Better version of the Piercing Rounds Magazine
+atomic-plate=
+reinforced-plate=
+enriched-plate=
+enhanced-solar=Покращена сонячна панель.
+reinforced-solar=Покращена сонячна панель.
+atomic-solar=Покращена сонячна панель.
+basic-fuel-capsule=Капсула з паливом.
+enhanced-fuel-capsule=Капсула з паливом.
+reinforced-fuel-capsule=Капсула з паливом.
+atomic-fuel-capsule=Капсула з паливом.
+atomic-artillery= Артилерійський снаряд з атомною бомбою.
+atomic-magazine=Покращений магазин.
+atomic-piercing-magazine=Покращений магазин.
+reinforced-magazine=Покращений магазин.
+reinforced-piercing-magazine=Покращений магазин.
+enhanced-magazine=Покращений магазин.
+enhanced-piercing-magazine=Покращений магазин.
 
 [technology-name]
-atomic-plate=Atomic plate
-reinforced-plate=Reinforced Plate
-enriched-plate=Enriched Plate
-enhanced-solar=Enhanced Solar Panel
-reinforced-solar=Reinforced Solar Panel
-atomic-solar=Atomic Solar Panel
-wood-coal= Wood to Coal
-basic-fuel-capsule=Basic Fuel Capsule
-enhanced-fuel-capsule=Enhanced Fuel Capsule
-reinforced-fuel-capsule=Reinforced Fuel Capsule
-atomic-fuel-capsule=Atomic Fuel Capsule
-atomic-artillery=Atomic Artillery Shell
-atomic-magazine=Atomic Firearm Magazine
-atomic-piercing-magazine=Atomic Piercing Rounds Magazine
-reinforced-magazine=Reinforced Firearm Magazine
-reinforced-piercing-magazine=Reinforced Piercing Rounds Magazine
-enhanced-magazine=Enhanced Firearm Magazine
-enhanced-piercing-magazine=Enhanced Piercing Rounds Magazine
+  atomic-plate=Плити 1
+reinforced-plate=Плити 2
+enriched-plate=Плити 3
+enhanced-solar=Покращена сонячна енергія 1
+reinforced-solar=Покращена сонячна енергія 2
+atomic-solar=Покращена сонячна енергія 3
+wood-coal= Деревину в вугілля
+basic-fuel-capsule=Паливні капсули 1
+enhanced-fuel-capsule=Паливні капсули 1
+reinforced-fuel-capsule=Паливні капсули 1
+atomic-fuel-capsule=Паливні капсули 1
+atomic-artillery=Атомний артилерійський снаряд
+atomic-magazine=Магазини 3
+atomic-piercing-magazine=Бронеюійні Магазини 3
+reinforced-magazine=Магазини 2
+reinforced-piercing-magazine=Бронебійні Магазини 2
+enhanced-magazine=Магазини 1
+enhanced-piercing-magazine=Бронеюійні Магазини 1
 
 [technology-description]
-atomic-plate=Unlocks an intermediate crafting componet
-reinforced-plate=Unlocks an intermediate crafting componet
-enriched-plate=Unlocks an intermediate crafting componet
-enhanced-solar=Unlocks a solar panel that produces more power
-reinforced-solar=Unlocks a solar panel that produces more power
-atomic-solar=Unlocks a solar panel that produces more power
+atomic-plate=
+reinforced-plate=
+enriched-plate=
+enhanced-solar=
+reinforced-solar=
+atomic-solar=
 wood-coal=Unlocks a recipe to turn wood into coal
-basic-fuel-capsule= Unlocks a fuel capsule
-enhanced-fuel-capsule= Unlocks a fuel capsule
-reinforced-fuel-capsule= Unlocks a fuel capsule
-atomic-fuel-capsule= Unlocks a fuel capsule
-atomic-artillery= Unlocks the Atomic Artillery Shell
-atomic-magazine=Unlocks the Atomic Firearm Magazine
-atomic-piercing-magazine=Unlocks the Atomic Piercing Rounds Magazine
-reinforced-magazine=Unlocks the Reinforced Firearm Magazine
-reinforced-piercing-magazine=Unlocks the Reinforced Piercing Rounds Magazine
-enhanced-magazine=Unlocks the Enhanced Firearm Magazine
+basic-fuel-capsule=
+enhanced-fuel-capsule=
+reinforced-fuel-capsule=
+atomic-fuel-capsule=
+atomic-artillery=
+atomic-magazine=
+atomic-piercing-magazine=
+reinforced-magazine=
+reinforced-piercing-magazine=
+enhanced-magazine=
 enhanced-piercing-magazine=Unlocks the Enhanced Piercing Rounds Magazine
 
 [entity-name]
